--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Nextjs and Tailwindcss boilerplate",
   "author": "zeon.studio",
   "license": "MIT",
-  "packageManager": "yarn@1.22.19",
+  "packageManager": "pnpm@9.10.0",
   "scripts": {
-    "dev": "yarn generate-json && next dev",
-    "build": "yarn generate-json && next build",
+    "dev": "pnpm generate-json && next dev",
+    "build": "pnpm generate-json && next build",
     "preview": "next start",
     "postbuild": "next-sitemap",
     "lint": "next lint",
@@ -34,30 +34,30 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-gtm-module": "^2.0.11",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
     "react-lite-youtube-embed": "^2.4.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^3.0.1",
-    "swiper": "^11.1.3"
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.13",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/marked": "^5.0.2",
     "@types/negotiator": "^0.6.3",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^9.2.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.10.0",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
+    "postcss": "^8.4.45",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "sass": "^1.77.1",
-    "sharp": "^0.33.3",
+    "sass": "^1.78.0",
+    "sharp": "^0.33.5",
     "tailwind-bootstrap-grid": "^5.1.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.11",
     "typescript": "5.4.5"
   }
 }
