--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Nextjs and Tailwindcss boilerplate",
   "author": "zeon.studio",
   "license": "MIT",
-  "packageManager": "pnpm@9.10.0",
   "scripts": {
     "dev": "pnpm generate-json && next dev",
     "build": "pnpm generate-json && next build",
     "preview": "next start",
+    "start": "next start",
     "postbuild": "next-sitemap",
     "lint": "next lint",
     "format": "prettier -w ./src",
@@ -25,6 +25,7 @@
     "disqus-react": "^1.1.5",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
+    "lighthouse": "^12.2.1",
     "marked": "^12.0.2",
     "negotiator": "^0.6.3",
     "next": "14.2.3",
@@ -59,5 +60,6 @@
     "tailwind-bootstrap-grid": "^5.1.0",
     "tailwindcss": "^3.4.11",
     "typescript": "5.4.5"
-  }
+  },
+  "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c"
 }
